--- a/src/components/WhatsCooking/Home.css
+++ b/src/components/WhatsCooking/Home.css
@@ -1,8 +1,8 @@
 .container {
-  position: absolute;
+  /* position: absolute;
   top: 30%;
   left: 10px;
-  text-align: center;
+  text-align: center; */
 }
 
 .container h2 {
@@ -11,5 +11,20 @@
 
 .h1{
   font-family: 'futura';
+}
+
+#mainCard{
+  background-image: linear-gradient(
+    45deg,
+    black 10%,
+    rgba(0, 1, 127, 0.7)
+  );
+}
+#mainCard1{
+  background-image: linear-gradient(
+    45deg,
+    rgba(0, 1, 127, 0.7) 10%,
+black
+  );
 }
 
